0.71
    Test fixes
    - Removed dependency on Text::Soundex [rt.cpan.org 25022]

    Doc fixes
    - Minor POD mistake in Test::Builder [rt.cpan.org 28869]
    * Test::FAQ has been updated with some more answers.

    Install fixes
    - Fixed the "LICENSE is not a known MakeMaker parameter name" warning
      on older MakeMakers for real this time.

0.70  Thu Mar 15 15:53:05 PDT 2007
    Bug Fixes
    * The change to is_fh() in 0.68 broke the case where a reference to
      a tied filehandle is used for perl 5.6 and back.  This made the tests
      puke their guts out.

0.69  Wed Mar 14 06:43:35 PDT 2007
    Test fixes
    - Minor filename compatibility fix to t/fail-more.t [rt.cpan.org 25428]

0.68  Tue Mar 13 17:27:26 PDT 2007
    Bug fixes
    * If your code has a $SIG{__DIE__} handler in some cases functions like
      use_ok(), require_ok(), can_ok() and isa_ok() could trigger that
      handler. [rt.cpan.org 23509]
    - Minor improvement to TB's filehandle detection in the case of overridden
      isa(). [rt.cpan.org 20890]
    - Will now install as a core module in 5.6.2 which ships with Test::More.
      [rt.cpan.org 25163]

    New Features
    - Test::Builder->is_fh() provides a way to determine if a thing
      can be used as a filehandle.

    Documentation improvements
    - Improved the docs for $Test::Builder::Level showing the encouraged
      use (increment, don't set)
    - Documented the return value of Test::Builder's test methods
    - Split out TB's method documentation to differenciate between test
      methods (ok, is_eq...), methods useful in testing (skip, BAILOUT...)
      and methods useful for building your own tests (maybe_regex...).

    Test fixes
    - We required too old a version of Test::Pod::Coverage.  Need 1.08 and not
      1.00. [rt.cpan.org 25351]

0.67  Mon Jan 22 13:27:40 PST 2007
    Test fixes
    - t/pod_coverage.t would fail if Test::Pod::Coverage between 1.07 and