@@ -35,6 +35,7 @@ t/harness_active.t
 t/has_plan.t
 t/has_plan2.t
 t/import.t
+t/is_deeply_dne_bug.t
 t/is_deeply_fail.t
 t/is_fh.t
 t/lib/Dummy.pm
